--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="20000">
-                    <img class="w-100" src="img/newpicture11.jpeg" alt="Image" width="940px" height="940px">
+                    <img class="w-100" src="New Images2 used/newpicture11.jpeg" alt="Image" width="940px" height="940px">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <div class="carousel-item " data-bs-interval="15000">
-                    <img class="w-100" src="img/newpicture9.jpeg" alt="Image" width="940px" height="940px">
+                    <img class="w-100" src="New Images2 used/newpicture9.jpeg" alt="Image" width="940px" height="940px">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -158,8 +158,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 400px;">
-                        <img class="position-absolute w-80 h-100 pt-5 pe-5" src="img/newpicture5.jpeg" alt="" style="object-fit: cover;  margin-top: 30px;">
-                        <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="img/newpicture1.jpeg" alt="" style="width: 200px; height: 200px; object-fit: cover;">
+                        <img class="position-absolute w-80 h-100 pt-5 pe-5" src="New Images2 used/newpicture5.jpeg" alt="" style="object-fit: cover;  margin-top: 30px;">
+                        <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="New Images2 used/newpicture1.jpeg" alt="" style="width: 200px; height: 200px; object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -222,7 +222,7 @@
                             </div>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/RDM_3801.jpg" alt="">
+                            <img class="img-fluid" src="New Images2 used/RDM_3801.jpg" alt="">
                             <div class="causes-overlay">
                                 <a class="btn btn-outline-primary" href="">
                                     Read More
@@ -257,7 +257,7 @@
                             </div>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/RDM_3986.jpg" alt="">
+                            <img class="img-fluid" src="New Images2 used/RDM_3986.jpg" alt="">
                             <div class="causes-overlay">
                                 <a class="btn btn-outline-primary" href="">
                                     Read More
@@ -290,7 +290,7 @@
                             </div>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/RDM_3645.jpg" alt="">
+                            <img class="img-fluid" src="New Images2 used/RDM_3645.jpg" alt="">
                             <div class="causes-overlay">
                                 <a class="btn btn-outline-primary" href="">
                                     Read More
@@ -503,7 +503,7 @@
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/RDM_3594.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="New Images2 used/RDM_3594.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>Being part of this community has shown me how small efforts can create huge impacts. </p>
                         <h5 class="mb-1">Sarah Adeyemi</h5>
@@ -511,7 +511,7 @@
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/RDM_3508.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="New Images2 used/RDM_3508.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>The work this NGO does is remarkable. From providing healthcare to the underserved to advocating for those without a voice.</p>
                         <h5 class="mb-1">Mrs Blessing</h5>
@@ -519,7 +519,7 @@
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/RDM_3660.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="New Images2 used/RDM_3660.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>Supporting this NGO has been a rewarding experience.</p>
                         <h5 class="mb-1">Seun Akindola</h5>
