--- a/photo.html
+++ b/photo.html
@@ -77,28 +77,28 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="img/RDM_3647.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3647.jpg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3461.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3461.jpg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3335.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3335.jpg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3485.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3485.jpg" alt="">
                             </div>
                             </div>
                     </div>
@@ -110,28 +110,28 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3594.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3594.jpg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3555.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3594.jpg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="img/newpicture9.jpeg" alt="">
+                                <img class="img-fluid" src="New Images2 used/newpicture9.jpeg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="img/newpicture10.jpeg" alt="">
+                                <img class="img-fluid" src="New Images2 used/newpicture10.jpeg" alt="">
                             </div>
                         </div>
                     </div>
@@ -143,28 +143,28 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3537.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3537.jpg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3428.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3428.jpg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3417.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3417.jpg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="img/RDM_3801.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3801.jpg" alt="">
                             </div>
                             </div>
                     </div>
@@ -176,28 +176,28 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="img/newpicture5.jpeg" alt="">
+                                <img class="img-fluid" src="New Images2 used/newpicture5.jpeg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3438.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3438.jpg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3450.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3450.jpg" alt="">
                             </div>
                             </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="img/newpicture8.jpeg" alt="">
+                                <img class="img-fluid" src="New Images2 used/newpicture8.jpeg" alt="">
                             </div>
                             </div>
                     </div>
@@ -208,21 +208,21 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3435.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3435.jpg" alt="">
                             </div>
                                             </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="img/newpicture11.jpeg" alt="">
+                                <img class="img-fluid" src="New Images2 used/newpicture11.jpeg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3463.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3463.jpg" alt="">
                             </div>
     
                         </div>
@@ -230,7 +230,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="THF FOOD BANK & EMPOWERMENT PICTURES/RDM_3476.jpg" alt="">
+                                <img class="img-fluid" src="New Images2 used/RDM_3476.jpg" alt="">
                             </div>
                         </div>
                     </div>
