--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
-                <a href="photo.html" class="nav-item nav-link">Photo Gallery</a>
+                <a href="photo.html" class="nav-item nav-link">Projects</a>
             </div>
             <div class="d-none d-lg-flex ms-2">
                 <a class="btn btn-outline-primary py-2 px-3" href="">
