--- a/photo.html
+++ b/photo.html
@@ -77,7 +77,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                 <video class="img-fluid" src="New Images2 used/video compress.mp4" alt="">
+                                <video class="img-fluid" src="New Images2 used/video compress.mp4" alt="" controls autoplay> </video>
                             </div>
                         </div>
                     </div>
