--- a/photo.html
+++ b/photo.html
@@ -34,10 +34,10 @@
         <!-- Navbar Start -->
         <nav id="nav" class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
             <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-                <h1 id="head" class="fw-bold text-primary m-0">Transformation<span class="text-white">Haven</span></h1>
+                <h1 id="head" class="fw-bold text-primary m-0">Transformation Haven <span class="text-white">Caring Hearts Foundation</span></h1>
                 <img class="img2" src="img/tran-removebg-preview.png" alt="" width="300px" height="300px">
             </a>
-            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <button type="button" class="navbar-toggler me-4 navbar22" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
