--- a/donate.html
+++ b/donate.html
@@ -33,13 +33,6 @@
 </head>
 
 <body>
-    <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-grow text-primary" role="status"></div>
-    </div>
-    <!-- Spinner End -->
-
-
    <!-- Navbar Start -->
    <div  class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
     <div class="top-bar text-white-50 row gx-0 align-items-center d-none d-lg-flex">
@@ -58,10 +51,10 @@
 
     <nav id="nav" class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 id="head" class="fw-bold text-primary m-0">Transformation<span class="text-white">Haven</span></h1>
+            <h1 id="head" class="fw-bold text-primary m-0">Transformation Haven <span class="text-white">Caring Hearts Foundation</span></h1>
             <img class="img2" src="img/tran-removebg-preview.png" alt="" width="300px" height="300px">
         </a>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <button type="button" class="navbar-toggler me-4 navbar22" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -77,6 +70,7 @@
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="photo.html" class="nav-item nav-link">Projects</a>
             </div>
             <div class="d-none d-lg-flex ms-2">
                 <a class="btn btn-outline-primary py-2 px-3" href="">
@@ -99,7 +93,7 @@
             <h1 class="display-4 text-white animated slideInDown mb-4">Donate</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">Donate</li>
                 </ol>
@@ -116,7 +110,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">Donate Now</div>
                     <h1 class="display-6 mb-5">Thanks For The Results Achieved With You</h1>
-                    <p class="mb-0">We look forward to achieve more with you </p>
+                    <p class="mb-0">sow a seed into our foundation</p>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <div class="h-100 bg-secondary p-5">
@@ -170,12 +164,12 @@
                 <img src="img/transformation3.png" alt="" width="300px" height="300px">
                 <div class="p">
                 <p>Transformation Haven Foundation is dedicated to transforming lives and communities by providing support, education, and empowerment to orphaned, underprivileged and disadvantaged individuals.</p>
-                <div class="d-flex pt-2" id="link">
-                        <a class="btn btn-square me-1" href="https://x.com/haven77677"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square me-1" href="https://web.facebook.com/profile.php?id=61567119178873"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-square me-0" href="https://www.tiktok.com/@transformation_haven?lang=en"><i class='bx bxl-tiktok'></i></a>
-                    </div>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-square me-1" href="https://x.com/haven77677"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-square me-1" href="https://web.facebook.com/profile.php?id=61567119178873"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square me-0" href="https://www.tiktok.com/@transformation_haven?lang=en"><i class='bx bxl-tiktok'></i></a>
+                </div>
             </div>
             </div>
             <div class="add">
