--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Transformation Haven Foundation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
+
     <meta content="" name="description">
 
     <!-- Favicon -->
@@ -33,12 +34,6 @@
 </head>
 
 <body>
-    <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-grow text-primary" role="status"></div>
-    </div>
-    <!-- Spinner End -->
-
 
   <!-- Navbar Start -->
   <div  class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
@@ -58,9 +53,9 @@
 
     <nav id="nav" class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 id="head" class="fw-bold text-primary m-0">Transformation<span class="text-white">Haven</span></h1>
+            <h1 id="head" class="fw-bold text-primary m-0">Transformation Haven<span class="text-white"> Caring Hearts Foundation</span></h1>
         </a>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <button type="button" class="navbar-toggler me-4 navbar22" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
