--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <a href="photo.html" class="nav-item nav-link">Projects</a>
             </div>
             <div class="d-none d-lg-flex ms-2">
-                <a class="btn btn-outline-primary py-2 px-3" href="">
+                <a class="btn btn-outline-primary py-2 px-1" href="">
                     Donate Now
                     <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                         <i class="fa fa-arrow-right"></i>
@@ -565,7 +565,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Transformation</a>Haven 2024.
+                        &copy; <a href="#">Transformation</a>Haven Caring Hearts Foundation 2024.
                     </div>
                 </div>
             </div>
