--- a/about.html
+++ b/about.html
@@ -297,7 +297,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Transformation</a>Haven 2024.
+                        &copy; <a href="#">Transformation</a>Haven Caring Hearts Foundation 2024.
                     </div>
                 </div>
             </div>
